# blrax

./: README.md  pyproject.toml
examples/: compare_hutchinson_hess_every.ipynb  compare_ivon_estimators.ipynb  compare_ivon_evon.ipynb  data_loaders.py  recreate_fig3_logreg.ipynb  test_mnist.ipynb  training.py  tune_ivon.py
src/blrax/: __init__.py  optim.py  states.py  utils.py
tests/: conftest.py  test_evon.py  test_optim.py
