[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blrax"
version = "0.1.0"
description = "Bayesian learning rule based optimisation algorithms in Jax"
authors = [{name = "Dimitrije Markovic"}]
license = {text = "MIT"}
dependencies = [
    "jax>=0.4.38",
    "optax>=0.2.4",
    "jaxtyping>=0.2.36"
]
readme = "README.md"
requires-python = ">=3.11"