[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blrax"
version = "0.1.10"
description = "Bayesian learning rule based optimisation algorithms in Jax"
authors = [{name = "Dimitrije Markovic"}]
license = {text = "MIT"}
dependencies = [
    "jax>=0.4.38",
    "optax>=0.2.4",
    "equinox>=0.12.2",
    "chex>=0.1.89",
]
readme = "README.md"
requires-python = ">=3.11"
